# bonsol

./: .dockerignore  .gitignore  .rustfmt.toml  .taplo.toml  1-build-risc0-images.sh  3-run-local-solana-validator.sh  7-deploy-solana-contracts.sh  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.cuda  Dockerfile.standard  Node.toml  NodeDocker.toml  README.md  bonsol.code-workspace  build-images.sh  deny.toml  docker-compose.yaml  docker-entrypoint.sh  flake.nix  gen.sh  install.sh  node_keypair.json  package-lock.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.toml  run-node.sh  run-relay.sh  run_relay.sh  rust-toolchain.toml  rustfmt.toml  setup.dockerfile  setup.sh  validator.sh
.devcontainer/: devcontainer.json
.github/comment-templates/: check.yaml  fmt.yaml
.github/docker/: Dockerfile.build  Dockerfile.prover  ci-entry.sh
.github/workflows/: build-ci-image.yaml  build-containers.yaml  (+9 more)
channel/: Cargo.toml  rustfmt.toml
channel/src/: assertions.rs  entrypoint.rs  error.rs  lib.rs  program.rs  proof_handling.rs  verifying_key.rs  verifying_keys.rs
channel/tests/: perf_test.rs  util.rs
channel/tests/fixtures/: status.fb
channel/ts-client/: jest.config.js  package.json
channel/ts-client/src/: deploy.ts  index.ts
channel/ts-client/tests/: main.test.ts
charts/: Chart.yaml  README.md  values.yaml
cli/: Cargo.toml  README.md
cli/src/: build.rs  cli.rs  command.rs  common.rs  deploy.rs  error.rs  estimate.rs  execute.rs  explorer.rs  explorer_cli.rs  init.rs  input_set.rs  main.rs  prove.rs  tests.rs
cli/src/tests/: estimate.rs
cli/src/tests/test_data/: test_id.json  test_manifest.json
docs/: docusaurus.config.ts  package.json  sidebars.ts
elf/: range  simple
examples/pow/bonsol-pow-example/programs/bonsol-pow-example/: Cargo.toml
examples/pow/bonsol-pow-example/programs/bonsol-pow-example/src/: lib.rs
images/dkpgen/: Cargo.toml
images/dkpgen/src/: main.rs
images/range/: Cargo.toml  manifest.json
images/range/src/: main.rs
images/simple/: Cargo.toml  manifest.json
images/simple/src/: main.rs
iop/: Cargo.toml
node/: .gitignore  Cargo.toml  Node.toml  build.rs  rustfmt.toml
node/src/: config.rs  main.rs  types.rs
node/src/callback/: mod.rs
node/src/ingest/: block_subscription.rs  dragon.rs  grpc_stream.rs  mod.rs  rpc.rs
node/src/observe/: mod.rs
node/src/prover/: mod.rs  utils.rs
node/src/risc0_runner/: mod.rs  utils.rs  verify_prover_version.rs
node/src/transaction_sender/: mod.rs
onchain/anchor-interface/: Cargo.toml
onchain/anchor-interface/src/: lib.rs
onchain/bonsol/: Cargo.toml
onchain/bonsol/src/: assertions.rs  entrypoint.rs  error.rs  lib.rs  program.rs  proof_handling.rs  prover.rs  utilities.rs  verifying_key.rs
onchain/bonsol/src/actions/: claim.rs  deploy.rs  execute.rs  input_set.rs  mod.rs  status.rs
onchain/bonsol/ts-client/: pnpm-lock.yaml  tsconfig.json
onchain/bonsol/ts-client/src/: index.ts
onchain/bonsol/ts-client/tests/: main.test.ts
onchain/channel/: Cargo.toml  rustfmt.toml
onchain/channel-interface/: Cargo.toml
onchain/channel-interface/src/: callback.rs  claim_state.rs  error.rs  handler.rs  instructions.rs  lib.rs
onchain/channel-interface/src/anchor/: mod.rs
onchain/channel-interface/src/macros/: mod.rs
onchain/channel-utils/: Cargo.toml
onchain/channel-utils/src/: lib.rs
onchain/channel/src/: assertions.rs  entrypoint.rs  error.rs  lib.rs  program.rs  proof_handling.rs  utilities.rs  verifying_key.rs
onchain/channel/src/actions/: claim.rs  deploy.rs  execute.rs  input_set.rs  mod.rs  status.rs
onchain/channel/ts-client/: package.json
onchain/channel/ts-client/src/: deploy.ts  execute.ts
onchain/channel/ts-client/tests/: main.test.ts
onchain/example-callback-program/: Cargo.toml
onchain/example-callback-program/src/: lib.rs
onchain/example-program-on-bonsol/: Cargo.toml
onchain/example-program-on-bonsol/src/: lib.rs
onchain/interface/: Cargo.toml
onchain/interface/src/: callback.rs  claim_state.rs  error.rs  instructions.rs  lib.rs  prover_version.rs  util.rs
proof-explorer/: README.md
prover/: Cargo.toml
prover/src/: image.rs  input_resolver.rs  lib.rs  prover.rs  util.rs
relay/: .gitignore  Cargo.toml  Node.toml  NodeDocker.toml  NodeDockertoml  build.rs  data  rustfmt.toml  seal.json  verification_key.json
relay/src/: config.rs  main.rs  types.rs
relay/src/bonsai/: mod.rs
relay/src/callback/: mod.rs
relay/src/ingest/: dragon.rs  mod.rs  rpc.rs
relay/src/observe/: mod.rs
relay/src/prover/: image.rs  mod.rs  utils.rs
relay/src/risc0/: image.rs  mod.rs
relay/src/util/: mod.rs
schemas/: channel_instruction.fbs  claim_v1.fbs  deploy_v1.fbs  execution_request_v1.fbs  input_set_op_v1.fbs  input_type.fbs  status_v1.fbs
schemas-rust/: Cargo.toml  build.rs
schemas-rust/schema/: input_type.fbs
schemas-rust/schemas/: channel_instruction.fbs  deploy_v1.fbs  execution_request_v1.fbs  input_set.fbs  input_set_op_v1.fbs
schemas-rust/src/: channel_instruction_generated.rs  claim_v1_generated.rs  deploy_v1_generated.rs  error.rs  execution_request_v1_generated.rs  input_set_generated.rs  input_set_op_v1_generated.rs  input_type_generated.rs  lib.rs  status_v1_generated.rs
schemas-ts/: account.ts  channel-instruction-data.ts  channel-instruction-ix-type.ts  channel-instruction.ts  channel_instruction.ts  claim-v1.ts  claim_v1.ts  complete-proof.ts  deploy-v1.ts  deploy_v1.ts  execution-input-type.ts  execution-request-v1.ts  execution_request_v1.ts  index.ts  input-set-op-v1.ts  input-set-op.ts  input-set.ts  input-type.ts  input.ts  input_set.ts  input_set_op_v1.ts  input_type.ts  package.json  program-input-type.ts  prover-version.ts  status-types.ts  status-v1.ts  status_v1.ts  struct.ts  tsconfig.json
sdk/: Cargo.toml
sdk/src/: image.rs  input_resolver.rs  lib.rs  prover.rs  util.rs
tester/: Cargo.toml
tester/cli-scenarios/: example-execution-request.json
tester/src/: main.rs
testing-examples/: example-execution-request.json  example-input-file.json
vkey/: README.md  package.json  parse_vk_to_rust.js
(+105 files in other folders)
