[workspace.metadata.crane]
name = "bonsol"

[workspace]
members = [
  "iop",
  "onchain/bonsol",
  "onchain/interface",
  "onchain/example-program-on-bonsol",
  "node",
  "schemas-rust",
  "cli",
  "sdk",
  "prover",
  "tester",
]
resolver = "2"
# Only necessary for nix cargo workspace artifacts to build without warnings.
# The actual crate derivations build using their individual manifest version.
package.version = "0.2.1"

[workspace.dependencies]
anyhow = "1.0.40"
bonsol-cli = { path = "./cli" }
bonsol-interface = { path = "./onchain/interface" }
bonsol-schema = { path = "./schemas-rust" }
bonsol-sdk = { path = "./sdk" }
flatbuffers = { version = "24.3.25" }
risc0-binfmt = { git = "https://github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix" }
risc0-circuit-recursion = { git = "https://github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix" }
risc0-core = { git = "https://github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix" }
risc0-groth16 = { git = "https://github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix" }
risc0-sys = { git = "https:m//github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix" }
risc0-zkp = { git = "https://github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix" }
risc0-zkvm = { git = "https://github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix", features = [
  "prove",
], default-features = false }
solana-cli-config = { version = "=1.18.22" }
solana-program = { version = "=1.18.22" }
solana-program-test = { version = "=1.18.22" }
solana-pubsub-client = { version = "=1.18.22" }
solana-rpc-client = { version = "=1.18.22" }
solana-rpc-client-api = { version = "=1.18.22" }
solana-sdk = { version = "=1.18.22" }
solana-transaction-status = { version = "=1.18.22" }
thiserror = "1.0.57"
tokio-test = "0.4.3"
yellowstone-grpc-client = "=1.15.4"
yellowstone-grpc-proto = "=1.14.2"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
