[workspace.metadata.crane]
name = "bonsol"

[workspace]
members = [
  "iop",
  "onchain/bonsol",
  "onchain/interface",
  "onchain/example-program-on-bonsol",
  "onchain/anchor-interface",
  "node",
  "schemas-rust",
  "cli",
  "sdk",
  "prover",
  "tester",
]


resolver = "2"
# Only necessary for nix cargo workspace artifacts to build without warnings.
# The actual crate derivations build using their individual manifest version.
package.version = "0.2.1"

[workspace.dependencies]
solana-sdk = "~2.0"
thiserror = "1.0.57"
flatbuffers = "24.3.25"
anyhow = "1.0.40"
solana-program = "~2.0"
solana-program-test = "~2.0"
solana-rpc-client = "~2.0"
solana-rpc-client-api = "~2.0"
solana-pubsub-client = "~2.0"
solana-transaction-status = "~2.0"
solana-cli-config = "~2.0"
yellowstone-grpc-client = "3.1.1"
yellowstone-grpc-proto = "3.1.1"
risc0-zkvm = { version = "1.2.1", features = [
  "prove",
], default-features = false }
risc0-core = { version = "1.2.1" }
risc0-zkp = { version = "1.2.1" }
risc0-groth16 = { version = "1.2.1" }
risc0-binfmt = { version = "1.2.1" }
risc0-circuit-recursion = { version = "1.2.1" }
risc0-sys = { version = "1.2.1" }
risc0-zkvm-platform = { version = "1.2.1" }
risc0-circuit-rv32im = { version = "1.2.1" }
risc0-circuit-recursion-sys = { version = "1.2.1" }
tokio-test = "0.4.3"
bonsol-interface = { path = "./onchain/interface" }
bonsol-schema = { path = "./schemas-rust" }
bonsol-cli = { path = "./cli" }
bonsol-sdk = { path = "./sdk" }

[patch.crates-io.curve25519-dalek] 
 git = "https://github.com/anza-xyz/curve25519-dalek.git" 
 rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" 

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
