[package]
name = "anagram-bonsol-channel"
version = "0.0.1"
description = "Solana channel to bonsai"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = {workspace = true}
anagram-bonsol-schema = {path = "../schemas-rust"}
thiserror = { workspace = true }
groth16-solana = { version = "0.0.2" }

[dev-dependencies]
solana-program-test = {workspace = true}
solana-sdk = {workspace = true}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]