[package]
name = "anagram-bonsol-channel"
version = "0.0.1"
description = "Solana channel to bonsai"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[features]
test-sbf = []

[dependencies]
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
solana-program = {workspace = true}
anagram-bonsol-schema = {path = "../schemas-rust"}
flatbuffers = {workspace = true}
thiserror = { workspace = true }
groth16-solana = { version = "0.0.2" }

[dev-dependencies]
solana-program-test = {workspace = true}
solana-sdk = {workspace = true}
anyhow = { workspace = true }
tokio-test = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]




[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]