[package]
name = "bonsol-cli"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tera = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
