[package]
name = "bonsol-cli"
version = "0.1.2"
edition = "2021"
description = "Command line interface for Bonsol - a zero-knowledge proof system for Solana"
license = "Apache-2.0"
repository = "https://github.com/anagrambuild/bonsol"

[[bin]]
name = "bonsol"
path = "src/main.rs"

[features]
integration-tests = []

[dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
bincode = "1.3.3"
bonsol-interface = "0.1.2"
bonsol-prover = "0.1.2"
bonsol-sdk = "0.1.2"
bytemuck = "1.15.0"
hex = "0.4.3"
byte-unit = "4.0.19"
bytes = "1.4.0"
cargo_toml = "0.20.3"
clap = { version = "4.4.2", features = ["derive", "env"] }
indicatif = "0.17.8"
num-traits = "0.2.15"
object_store = { version = "0.9.1", features = ["aws"] }
rand = "0.8.5"
reqwest = { version = "0.11.26", features = [
  "gzip",
  "deflate",
  "stream",
  "native-tls-vendored",
] }
risc0-binfmt = "1.2.1"
risc0-zkvm = { version = "1.2.1", features = ["prove"], default-features = false }
risc0-zkvm-platform = "1.2.1"
risc0-circuit-rv32im = "1.2.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.104"
sha2 = "0.10.6"
solana-cli-config = "2.0"
solana-rpc-client = "2.0"
solana-sdk = "2.0"
tera = "1.17.1"
thiserror = "1.0.65"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
