[package]
name = "bonsol-node"
version.workspace = true
edition = "2021"
publish = false          # Exclude local crates from licensing checks

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]

[dependencies]
anyhow = { version = "1.0.79" }
ark-bn254 = { version = "0.4.0" }
ark-crypto-primitives = { version = "0.4.0" }
ark-ec = { version = "0.4.2" }
ark-ff = { version = "0.4.2" }
ark-groth16 = { version = "0.4.0" }
ark-relations = { version = "0.4.0" }
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0" }
async-trait = "0.1.80"
bonsol-interface = { workspace = true }
bonsol-prover = { path = "../prover" }
bytemuck = "1.15.0"
byteorder = "1.5.0"
bytes = "1.5.0"
dashmap = "5.5.3"
figment = { version = "0.10.14", features = ["toml"] }
flatbuffers = { workspace = true }
fnv = "1.0.7"
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30" }
hex = "0.4.3"
hex-literal = "0.4.1"
iop = { path = "../iop" }
itertools = "0.13.0"
memmap = "0.7.0"
metrics = "0.23.0"
metrics-exporter-prometheus = { version = "0.15.0", features = [
  "http-listener",
] }
num = "=0.4.1"
num-bigint = "0.4.4"
num-traits = "0.2.18"
rand = { version = "0.6.4" }
reqwest = { version = "0.11.26", features = [
  "gzip",
  "deflate",
  "stream",
  "native-tls-vendored",
] }
risc0-binfmt = { workspace = true }
risc0-circuit-recursion = { workspace = true }
risc0-core = { workspace = true }
risc0-groth16 = { workspace = true, features = ["prove"] }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true, features = [
  "prove",
], default-features = false }
rlimit = "0.10.1"
serde = { version = "1.0.197" }
serde_json = { version = "1.0.114" }
solana-pubsub-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
strum_macros = "0.26.4"
tempfile = "3.10.1"
thiserror = { workspace = true }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "time",
  "json",
  "env-filter",
] }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
[dev-dependencies]
expect-test = "1.5.0"

[lints]
workspace = true
