[package]
name = "bonsol-prover"
version = "0.0.1"
edition = "2021"
publish = false     # Exclude local crates from licensing checks

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bincode = "1.3.3"
bonsol-schema = { path = "../schemas-rust" }
bytes = "1.5.0"
futures-util = "0.3.30"
reqwest = { version = "0.11.26", features = [
  "gzip",
  "deflate",
  "stream",
  "native-tls-vendored",
] }
risc0-binfmt = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { version = "1.0.197" }
serde_json = "1.0.104"
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
tokio = "1.36.0"
