[package]
name = "bonsol-prover"
version = "0.3.0"
description = "Prover functionality for Bonsol"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"
publish = true

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bincode = "1.3.3"
bytes = "1.5.0"
futures-util = "0.3.30"
reqwest = { version = "0.11.26", features = [
  "gzip",
  "deflate",
  "stream",
  "native-tls-vendored",
] }
risc0-binfmt = "1.2.1"
risc0-zkvm = { version = "1.2.1", features = ["prove"], default-features = false }
serde = { version = "1.0.197" }
serde_json = "1.0.104"
solana-rpc-client = "2.0"
solana-rpc-client-api = "2.0"
solana-sdk = "2.0"
tokio = "1.36.0"

bonsol-schema = "0.1.2"

[dev-dependencies]
mockito = "1.5.0"
