[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
num = "=0.4.1"
flatbuffers = {workspace = true}
wasmer = { version = "=4.2.6", features = ["compiler"] }
wasmer-wasix = { version = "0.18.1" }
tokio = { version = "1.36.0", features = ["full"] }
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-transaction-status = { workspace = true }
futures-util = { version = "0.3.30" }
clap = { version = "4.5.1", features = ["derive"] }
clap_derive = { version = "4.5.0" }
thiserror = { workspace = true }
anyhow = { version = "1.0.79" }
bonsai-sdk = { version = "0.6.1" }
ark-circom = { path = "../../circom-compat", features = ["default"] }
ark-bn254 = { version = "=0.4.0" }
ark-relations = { version = "=0.4.0" }
ark-std = { version = "=0.4.0" }
ark-crypto-primitives = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0" }
rand = { version = "0.8.4" }
risc0-zkvm = { git= "https://github.com/risc0/risc0", tag="v0.21.0-rc.1", features = [
  "prove"
] }
ark-serialize = "0.4.0"
risc0-groth16 = { git= "https://github.com/risc0/risc0", tag="v0.21.0-rc.1", features = [
  "prove"
] }
anagram-bonsol-schema = { path = "../schemas-rust" }
serde = { version = "1.0.197" }
serde_json = { version = "1.0.114" }
hex = "0.4.3"
redb = "1.5.0"
bincode = "=2.0.0-rc.3"
[dev-dependencies]


[lints]
workspace = true
