[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = {version = "0.10.14", features = ["toml"]}
fnv = "1.0.7"
num = "=0.4.1"
dashmap = "5.5.3"
bytes = "1.5.0"
reqwest = { version = "0.11.26", features = [
  "gzip",
  "deflate",
  "stream",
  "native-tls-vendored",
] }
anagram-bonsol-channel = { path = "../channel" , features = ["no-entrypoint"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
flatbuffers = { workspace = true }
wasmer = { version = "=4.2.6", features = ["compiler"] }
wasmer-wasix = { version = "0.18.1" }
tokio = { version = "1.36.0", features = ["full"] }
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-transaction-status = { workspace = true }
futures-util = { version = "0.3.30" }
thiserror = { workspace = true }
anyhow = { version = "1.0.79" }
bonsai-sdk = { version = "0.6.1" }
ark-circom = { path = "../../circom-compat", features = ["default"] }
ark-bn254 = { version = "=0.4.0" }
ark-relations = { version = "=0.4.0" }
ark-std = { version = "=0.4.0" }
ark-crypto-primitives = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0" }
rand = { version = "0.8.4" }
risc0-zkvm = { version = "0.21.0", features = ["prove"] }
ark-serialize = "0.4.0"
risc0-groth16 = { version = "0.21.0", features = ["prove"] }
risc0-binfmt = { version = "0.21.0" }
anagram-bonsol-schema = { path = "../schemas-rust" }
serde = { version = "1.0.197" }
serde_json = { version = "1.0.114" }
hex = "0.4.3"
redb = "1.5.0"
bincode = "=2.0.0-rc.3"
[dev-dependencies]


[lints]
workspace = true
