[package]
name = "bonsol-schema"
version = "0.2.1"
description = "Bonsol types, schema definitions"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[dependencies]
bytemuck = "1.7.2"
flatbuffers = { workspace = true }
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = { workspace = true }

[lints]
workspace = true
