[package]
name = "bonsol-schema"
version = "0.3.0"
description = "Bonsol types, schema definitions"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"
include = [
    "src/**/*",
    "build.rs",
    "schemas/*.fbs",
    "../schemas/*.fbs"
]

[dependencies]
bytemuck = "1.7.2"
flatbuffers = "25.1.21"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.57"
