[package]
name = "bonsol-sdk"
version = "0.3.0"
description = "SDK for interacting with Bonsol programs"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bincode = "1.3.3"
bytes = "1.5.0"
flatbuffers = "25.1.21"
futures = "0.3.30"
futures-util = "0.3.30"
num-traits = "0.2.19"
reqwest = { version = "0.11.20", features = [
    "gzip",
    "deflate",
    "stream",
    "native-tls-vendored",
] }
serde = "1.0.197"
serde_json = "1.0.104"
solana-sdk = "~2.0"
solana-client = "~2.0"
thiserror = "1.0.57"
tokio = { version = "1.24.2", features = ["full"] }

# Use published versions
bonsol-schema = "0.1.2"
bonsol-interface = "0.1.2"

[dev-dependencies]
tokio-test = "0.4.3"
