[package]
name = "bonsol-tester"
version.workspace = true
edition = "2021"
publish = false          # Exclude local crates from licensing checks

[dependencies]
bonsol-cli.workspace = true
bonsol-interface.workspace = true
bonsol-sdk.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true

anyhow = "1.0.91"
rand = "0.8.5"
tokio = "1.41.0"
