[package]
name = "bonsol-anchor-interface"
version.workspace = true
edition = "2021"
publish = false                  # Exclude local crates from licensing checks

[features]
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = ">=0.28"
bonsol-schema.workspace = true
bonsol-interface = {workspace = true, features = ["on-chain"], default-features = false}
paste = "1.0.12"


[lints.rust]
unused_macros = "allow"