[package]
name = "bonsol"
version = "0.3.2"
description = "Bonsol onchain program"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
ark-bn254 = { version = "0.4.0" }
ark-serialize = { version = "0.4.0", default-features = false }
bonsol-interface = { version = "0.3.1", features = ["on-chain"], default-features = false }
flatbuffers = { version = "25.1.21", default-features = false }
groth16-solana = { version = "0.0.2", default-features = false }
hex = { version = "0.4.2", default-features = false }
hex-literal = "0.4.1"
num-bigint = { version = "0.4.4", default-features = false }
solana-program = "~2.0"
thiserror = "1.0.57"
getrandom = { version = "0.2.15", default-features = false, features = ["custom"] }

[dev-dependencies]
solana-program-test = "~2.0"
solana-sdk = "~2.0"
anyhow = "1.0.79"
tokio-test = "0.4.3"

[patch.crates-io]
getrandom = { version = "0.1.16", default-features = false, features = ["custom"] }
