[package]
name = "bonsol"
version = "0.3.5"
description = "Solana channel to Bonsol"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
bonsol-interface = { version = "0.3.5", features = ["on-chain"], default-features = false }
flatbuffers = "24.3.25"
groth16-solana = "0.0.2"
hex = "0.4.2"
hex-literal = "0.4.1"
num-bigint = "0.4.4"
solana-program = "~2.0"
thiserror = "1.0.57"

