[package]
name = "bonsol-channel-interface"
version = "0.0.1"
edition = "2021"

[features]
on-chain = ["solana-program", "bonsol-channel-utils/on-chain"]
default = ["solana-sdk", "bonsol-channel-utils/default", "serde"]
anchor = ["on-chain", "anchor-lang"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bonsol-schema = { path = "../../schemas-rust", version = "0.0.1" }
bonsol-channel-utils = { path = "../channel-utils", version="0.0.1" , optional = true, default-features = false}
flatbuffers = {workspace = true}
solana-program = { workspace = true, optional = true}
solana-sdk = { workspace = true, optional = true }
thiserror = { workspace = true }
arrayref = "0.3.6"
paste = "1.0"
base64 = "0.21.2"
serde = { version = "1.0.197", optional = true }
bytemuck = { version = "1.15.0", features = ["derive"] }

[dependencies.anchor-lang]
version = ">=0.28"
optional = true
 
[dev-dependencies]