[package]
name = "callback-example"
version = "0.0.1"
description = "example raw solana program to show how to use the callback feature of bonsol"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[features]
test-sbf = []

[dependencies]
solana-program = {workspace = true}
bonsol-channel-interface = { path = "../channel-interface", features = ["on-chain"], default-features = false}

[dev-dependencies]
solana-program-test = {workspace = true}
solana-sdk = {workspace = true}
anyhow = { workspace = true }
tokio-test = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]