[package]
name = "callback-example"
version.workspace = true
description = "example raw solana program to show how to use the callback feature of bonsol"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[features]
test-sbf = []

[dependencies]
bonsol-interface = { path = "../interface", features = [
  "on-chain",
], default-features = false }
solana-program = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio-test = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
