[package]
name = "bonsol-interface"
version = "0.3.2"
description = "Interface to Bonsol on-chain program instructions, PDA methods and non-flatbuffer types"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[features]
on-chain = ["solana-program"]
default = ["solana-sdk", "serde"]

[dependencies]
arrayref = "0.3.6"
bytemuck = { version = "1.15.0", features = ["derive"] }
flatbuffers = "25.1.21"
hex = "0.4.3"
serde = { version = "1.0.197", optional = true }
sha3 = "0.10.8"
solana-program = { version = "~2.0", optional = true }
solana-sdk = { version = "~2.0", optional = true }
thiserror = "1.0.57"
bonsol-schema.workspace = true

[dev-dependencies]
