[package]
name = "bonsol-interface"
version = "0.3.3"
edition = "2021"
publish = false           # Exclude local crates from licensing checks

[features]
on-chain = ["solana-program"]
default = ["solana-sdk", "serde"]

[dependencies]
arrayref = "0.3.6"
bytemuck = { version = "1.15.0", features = ["derive"] }
flatbuffers = { workspace = true }
hex = "0.4.3"
serde = { version = "1.0.197", optional = true }
sha3 = "0.10.8"
solana-program = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
thiserror = { workspace = true }
bonsol-schema = { version = "0.3.3", path = "../schemas-rust" }

[dev-dependencies]
