[package]
name = "bonsol-pow-pow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonsol_pow_pow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anagram-bonsol-channel-interface = { path = "../../../../../onchain/channel-interface" , features = ["on-chain"] }
